maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:24: error: not enough arguments for method trouveChemin: (x: Int, y: Int)Unit.
Unspecified value parameters x, y.
  while (!estSurBiscuit()) trouveChemin();
                                       ^ShortestPathMaze:53: error: overloaded method value + with alternatives:
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int
 cannot be applied to ((Int, Int, Int, Int))
      indic = getIndication(getX()+xModDir, getY()+yModDir);
                                  ^ShortestPathMaze:53: error: overloaded method value + with alternatives:
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int
 cannot be applied to ((Int, Int, Int, Int))
      indic = getIndication(getX()+xModDir, getY()+yModDir);
                                                  ^